bk_ida/gccida/c2/output_format
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1088:22: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void  output_format( output_buffer_0 *buffer) 
                     ^~~~~~~~~~~~~~~
                     output_buffer
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1097:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v9; // rcx 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1101:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v13; // rax 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1104:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v16; // rax 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1107:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v19; // rcx 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1112:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *format_args; // rax 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1115:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v27; // rcx 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1118:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v30; // rcx 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1126:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v38; // rdi 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1130:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v42; // rax 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1283:25: error: use of undeclared identifier 'off_6474F4'
sprintf( digit_buffer, &off_6474F4[1], *v11); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1297:40: error: use of undeclared identifier 'off_6660B2'
sprintf( digit_buffer, ( const char *)&off_6660B2, *v12); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1329:24: error: use of undeclared identifier 'off_6660B6'
sprintf( digit_buffer, off_6660B6, *v49); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1363:25: error: use of undeclared identifier 'off_66C47B'
sprintf( digit_buffer, &off_66C47B[1], *v21); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/diagnostic.c:1377:24: error: use of undeclared identifier 'off_66B3AF'
sprintf( digit_buffer, off_66B3AF, *v39); 
                       ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_format/src/obj/diagnostic.o] Error 1
